resources/assets/less/uniform-builder.less
/* ... */
    /* End Accent Popup */

 /* Accent Popup */

        div#primaryTailSweepPopup {

            cursor: grab;
            padding: 10px;

            display: none;
            position: absolute;

            width: 1000px;
            height: 700px;
            top: 300px;
            left: 300px;
            z-index: 3100;
            background-color: #fff;

            -webkit-box-shadow: 6px 6px 45px 5px rgba(0,0,0,0.75);
            -moz-box-shadow: 6px 6px 45px 5px rgba(0,0,0,0.75);
            box-shadow: 6px 6px 45px 5px rgba(0,0,0,0.75);

            div.footer {

                position: absolute;
                bottom: 0;
                width: 100%;
                height: 40px;
                color: white;
                background-color: #808080;
                left: 0;
                padding: 5px;

            }

            .pagePanelHeader;

            div.footer {

               

            }

            div.main-content {

                width: 100%;
                height: 510px;
                overflow-y: scroll;
                padding: 20px;
                padding-top: 0px;
                padding-bottom: 50px;

                div.tailSweepPopupResults {

                    div.item.grow {  transform: scale(1.0); transition: all .1s ease-in-out; }
                    div.item.grow:hover { transform: scale(1.0); }

                    div.item {

                        color: #3d3d3d;
                        float: left;
                        width: 390px;
                        height: 210px;
                        background-color: #e7e7e7;
                        margin: 10px;
                        background-size: contain;
                        cursor: pointer;
                        margin-bottom: 50px;
                        margin-right: 20px;
                        margin-left: 40px;
                        background-position: bottom center;
                        background-repeat: no-repeat;
                        overflow: hidden;

                        -webkit-box-shadow: 3px 9px 24px -5px rgba(0,0,0,0.75);
                        -moz-box-shadow: 3px 9px 24px -5px rgba(0,0,0,0.75);
                        box-shadow: 3px 9px 24px -5px rgba(0,0,0,0.75);

                        div.text-preview {

                            font-size: 2.7em;
                            text-align: center;
                            width: 100%;
                            height: 50px;  
                            margin-top: 50px;
                            position: absolute;
                            
                        }

                        div.name {
                            
                            width: 100%;
                            height: 30px;
                            margin-top: 160px;
                            background-color: #acacac;
                            color: white;
                            transition: all 0.1s ease-in-out;
                            text-align: center;
                            font-weight: bold;
                            font-size: 0.9em;
                            padding-top: 7px;
                            position: absolute;

                        }

                        div.name.pullUp {

                            background-color: #3d3d3d;

                        }

                    }

                }

            }

        }

    /* End Tailsweep Popup */

    /* Generic, Popup */

    div.close-popup  {

        color: @customizer_forecolor;
        position: absolute;
        right: 0;
        padding: 30px;
        top: -10px;
        cursor: pointer;

    }

    div.close-popup:hover {

        color: black;

    }

    /* End Generic Popup */

    /* applicationUI */

        div#changeApplicationUI {

            position: absolute;
            margin-top: -400px;
            background-color: #808080;
            width: 500px;
            height: 360px;
            margin-left: 25px;
            box-shadow: 15px 15px 33px -28px rgba(0, 0, 0, 0.7);
            padding: 30px;
            padding-left: 50px;
    
            -webkit-box-shadow: 6px 6px 45px 5px rgba(0,0,0,0.75);
            -moz-box-shadow: 6px 6px 45px 5px rgba(0,0,0,0.75);
            box-shadow: 6px 6px 45px 5px rgba(0,0,0,0.75);

            div.closeApplicationChanger {

                color: #000000;

            }

            div.closeApplicationChanger:hover {

                color: white;
                
            }

            div.body {

                padding: 30px;
                font-size: 1.3em;
                padding-top: 30px;
                padding-left: 10px;

                div.optionButton {

                    display: inline-block;
                    width: 40%;
                    font-size: 1.5em;
                    text-align: center;
                    border: 1px solid #000000;
                    margin-left: 30px;
                    margin-bottom: 30px;
                    padding: 10px;
                    cursor: pointer;

                    -webkit-box-shadow: 15px 15px 33px -28px rgba(0,0,0,0.7);
                    -moz-box-shadow: 15px 15px 33px -28px rgba(0,0,0,0.7);
                    box-shadow: 15px 15px 33px -28px rgba(0,0,0,0.7);
    
                    div.icon { }

                    div.caption {

                        font-size: 0.4em;

                    }

                }

                div.optionButton:hover {

                    border: 1px solid white;

                }
            }

        }
/* ... */

